--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   "dependencies": {
     "@babel/preset-react": "^7.28.5",
     "@swc/core": "^1.15.5",
+    "axios": "^1.13.2",
     "compression-webpack-plugin": "^11.1.0",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.4",
     "mini-css-extract-plugin": "^2.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react_ujs": "^3.2.1",
     "react-dom": "^18.3.1",
+    "react_ujs": "^3.2.1",
     "sass-loader": "^16.0.6",
     "shakapacker": "9.4.0",
     "style-loader": "^4.0.0",
